[tool.poetry]
name = "jetstream-python"
version = "0.3.0"
description = ""
authors = ["charbonnierg <guillaume.charbonnier@araymond.com>"]
packages = [
    { include = "jsm", from = "src" },
    { include = "_nats", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
mypy = "^0.910"
uvloop = "^0.16.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
